Temp fix for wrong sized video
The video got exported at HD size, and it's taking a long time to render
correctly. In the meantime we'll use HTML and CSS hacks to show only the
portion in the center that we care about.

--- a/css/main.css
+++ b/css/main.css
@@ -18,3 +18,14 @@
     background:transparent;
 }
 
+.video-container {
+  width: 1024px;
+  display: block;
+  overflow: hidden;
+  height: 768px;
+}
+
+#example_video_1 {
+  margin-left: -269px;
+  margin-top: -76px;
+}
